# nebari-argo-assistant

./: .env.tpl  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  environment_dev.yml  pyproject.toml
.github/workflows/: test.yml
argo_assistant/: __init__.py  environment_management.py  io.py  workflows.py
examples/: basic_conda_usage-LAUNCH.py  basic_conda_usage-RUN.py  basic_conda_usage.py
scripts/: clone_jatic_tools.sh  install_jatic_tools.sh  setup_workspace.sh
tests/: conftest.py  test_environment_management.py  test_io.py  test_workflows.py
