[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "argo-assistant"
version = "0.0.1"
authors = [
    {name = "Quansight POC: Kim Pevey", email = "kcpevey@quansight.com"},
]
description = "Examples and utilities for running Argo on Nebari"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests",
]

[project.optional-dependencies]
dev = ["pre-commit"]
test = ["pytest"]
